# video-to-text

./: .env  .gitignore  CHANGELOG.md  Dockerfile_app  Dockerfile_ffmpeg  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py  index.html  main.py  requirements.txt  transcribe_service.py
docs/: diagram.mermaid
tests/: conftest.py  requirements-test.txt  test_api.py
