[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "video-to-text"
dynamic = ["version"]
requires-python = ">=3.13"

[tool.setuptools.dynamic]
version = {attr = "app.__version__"}

[tool.bumpversion]
current_version = "0.1.2"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "app/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py313"]

# ---------------------------------------------------------------------------
# pylint
# ---------------------------------------------------------------------------
[tool.pylint.main]
py-version = "3.13"
recursive = true
ignore = ["tests"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = []
