[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "video-to-text"
dynamic = ["version"]
requires-python = ">=3.13"

[tool.setuptools.dynamic]
version = {attr = "app.__version__"}

# ---------------------------------------------------------------------------
# bumpversion
# ---------------------------------------------------------------------------
[tool.bumpversion]
current_version = "0.1.4"
commit = true
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "app/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'

# ---------------------------------------------------------------------------
# git-cliff
# ---------------------------------------------------------------------------
[tool.git-cliff.changelog]
header = "# Changelog\n"
body = """
## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% for group, commits in commits | group_by(attribute="group") %}\
### {{ group }}
{% for commit in commits %}\
- {{ commit.message | upper_first }}
{% endfor %}
{% endfor %}\
"""
trim = true
render_always = false
skip_if_empty = true

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
tag_pattern = "v[0-9].*"
sort_commits = "oldest"
split_commits = false

[[tool.git-cliff.git.commit_parsers]]
message = "^feat"
group = "Features"

[[tool.git-cliff.git.commit_parsers]]
message = "^fix"
group = "Bug Fixes"

[[tool.git-cliff.git.commit_parsers]]
message = "^refactor|^perf"
group = "Performance"

[[tool.git-cliff.git.commit_parsers]]
message = "^docs"
group = "Documentation"

[[tool.git-cliff.git.commit_parsers]]
message = "^chore"
group = "Chores"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py313"]

# ---------------------------------------------------------------------------
# pylint
# ---------------------------------------------------------------------------
[tool.pylint.main]
py-version = "3.13"
recursive = true
ignore = ["tests"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = []
